fixed issue with playback on iOS

--- a/styles/style.css
+++ b/styles/style.css
@@ -45,8 +45,8 @@ html {
 }
 
 .controls .button {
-    margin-left:   20px;
-    margin-right:  20px;
+    margin-left:   7px;
+    margin-right:  7px;
     height:        36px;
     width:         36px;
     border-radius: 50%;
